Including contributors section, this is essentially the 2.0 release
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/community_101.adoc
+++ b/community_101.adoc
@@ -1,5 +1,5 @@
 = Community 101: Understanding, Joining, or Forming a New Community
-// Authors: Bryan Behrenshausen <bbehrens@redhat.com>, Dave Neary <dneary@redhat.com>, Karsten Wade <kwade@redhat.coim>
+// Authors: Bryan Behrenshausen <bbehrens@redhat.com>, Dave Neary <dneary@redhat.com>, Karsten Wade <kwade@redhat.com>
 // Updated: 2020-12-16
 // Version: 2.0
 // Status: DRAFT
