--- a/the_open_source_way-guidebook-2.0.adoc
+++ b/the_open_source_way-guidebook-2.0.adoc
@@ -23,5 +23,7 @@ include::measuring_success_section.adoc[]
 
 // include::references_and_cases_section.adoc[]
 
+include::CONTRIBUTORS.adoc[]
+
 :leveloffset: -1
 
