--- a/what_is_a_contribution.adoc
+++ b/what_is_a_contribution.adoc
@@ -1,6 +1,8 @@
 = What Is a Contribution?
-// Authors:
-// Updated:
+// Authors: Karsten Wade <kwade@redhat.com>
+// Updated: 2020-12-16
+// Version: 2.0
+// Status: DRAFT
 
 There is a common misunderstanding that only code and possibly documentation are a "true" contribution to an open source project.
 This terrible idea has a name that deserves to stay a part of history, "code is king."
