Commenting out to clean up build for review - I have have the task of finishing these, and I want to get the broken stuff out of the build for ongoing reviews. - When content is added for these sections, we'll uncomment each as done.
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/community_roles.adoc
+++ b/community_roles.adoc
@@ -199,34 +199,59 @@ They may have some skills or personality traits that make the effort more intere
 
 What is marketing::
 In open source software, marketing is the act of promoting the community and its software efforts.
-Other practices, such as market research and advertising, do not come typically happen in the community itself.
+Other practices, such as market research and advertising, do not typically happen in the community itself.
 
-What a marketeer does::
-
+What a marketer does::
+Works with different parts of the project to help them ini understanding what their users want and need, then to simplify and amplify those messages out to the world.
+Feedback from users in open source often goes directly to the development team, in the form of bug reports and user help.
+Unlike in a closed software development method, the contributors closest to the content and code tend to have a high level of knowledge about the user base.
+Marketers can help gather, clarify, organize, and prioritize that information into feature sets and roadmaps.
 
 Why people like this role::
+People who are interested in the modern world of marketing beyond the "it's all digital" point-of-view can see the aspects of truth, openness, and transparency that are hallmarks of some brands in the world, mirrored in the very processes of open source development.
 
 === Helping drive outreach for the project 
 
-What is ::
+What is outreach::
+This is the work involved in connecting with users, participants, and potential contributors, as well as the world in general.
+These connections are for more than marketing, it may involve aspects of recruiting, user help, feedback gathering, audience analysis, tech support, and so forth.
 
-What a foo does::
+What a outreach coordinator does::
+Works directly with creators in the project (code, content, design, marketing, etc.) and acts as a two-way conduit from the project into various forums.
+The forums might be web-based or mailing lists the project maintains, they may be blogs and tech journalists, they may be websites users go for asking and answering questions.
+A person doing outreach is knowledgeable to some degree about nearly every aspect of the project, able to identify and establish conections from those parts of the project to the outside world.
 
 Why people like this role::
+This role involves getting to know people and processes, and communicating about them.
+It's an opportunity to be the proxy for people who otherwise might not get heard from in the project, helping to bring those voices to the forefront.
 
 === Focusing on community enablement, management, and architecture
 
-What is ::
+What is community architecture et al::
+With the success of an open source project hinging as much on the community as the code base, most projects have people formally or informally doing the role of designing and helping maintain the community itself as a top priority.
 
-What a foo does::
+What a community person does::
+As a core part of their role, this person would be aware of and oversee or directly implement the many best practices in this guidebook.
+When this role is comprised of multiple people or is only part-time staffed, people involved tend to focus on the practices most germain to the project.
+In this way a project that is light on community management/enablement resources can still get the key parts done, eventually.
 
 Why people like this role::
-
+This role is for people who enjoy communicating, collaborating, and connecting other people.
+It's helpful if you get as much joy out of watching other people succeed—while helping celebrate that success, of course—as you do outy out of your own successes.
+The role is also attractive to people who are interested and skilled at doing a lot of many varied things (a jack-of-all-trades
+////
 === Organizing and working onsite at events
 
-What is ::
+What is event organizing::
+Technical, academic, and other open source community events are a common and useful way to conduct outreach for a project.
+A project might get involved in an event in a number of ways:
++
+* Co-host a evening of technical talks.
+* Have a booth at an open source conference expo hall.
+* Conduct a half-day workshop.
 
-What a foo does::
+
+What an event organizer does::
 
 Why people like this role::
 
@@ -254,6 +279,7 @@ What is ::
 What a foo does::
 
 Why people like this role::
+////
 
 === Other technical roles
 
