--- a/presenting_tosw.adoc
+++ b/presenting_tosw.adoc
@@ -4,7 +4,7 @@
 // Versions: 1.99
 // Status: PUBLISHED
 
-An English idiom says, "There is a method to my madness.".footnote:[From "Hamlet" by William Shakespeare, Act 2 Scene 2: Polonius (aside) "Though this be madness, yet there is method in `t"]
+An English idiom says, "There is a method to my madness."footnote:[From "Hamlet" by William Shakespeare, Act 2 Scene 2: Polonius (aside) "Though this be madness, yet there is method in `t"]
 Most of the time, the things we do make absolutely no sense to outside observers.
 Out of context, they look like sheer madness.
 But for those inside that messiness—inside that whirlwind of activity—there's a certain regularity, a certain predictability, and a certain motive.
