--- a/CONTRIBUTORS.adoc
+++ b/CONTRIBUTORS.adoc
@@ -15,7 +15,7 @@
 ** Editor(s)/Reviewer(s): mailto:pdickers@redhat.com[Paula Dickerson] (lead), Editorial team
 * To Build Diverse Open Source Communities, Make Them Inclusive First
 ** Author(s): mailto:laurenmaffeo8@gmail.com[Lauren Maffeo]
-** Editor(s)/Reviewer(s): mailto:bbehrens@redhat.com[Bryan Behrenshausen] (lead), Editorial team, Subject Matter Expert (SME)
+** Editor(s)/Reviewer(s): mailto:bbehrens@redhat.com[Bryan Behrenshausen] (lead), mailto:marinaz@redhat.com[Marina Zhurakhinskaya] (subject matter expert (SME) reviewer), Editorial team
 * Why Do People Participate in Open Source Communities?
 ** Author(s): mailto:ghaff@redhat.com[Gordon Haff]
 ** Editor(s)/Reviewer(s): mailto:bkp@redhat.com[Brian Proffitt] (lead), Editorial team
@@ -39,7 +39,7 @@
 ** Author(s): mailto:andyo@praxagora.com[Andy Oram], mailto:kwade@redhat.com[Karsten Wade]
 * Community Manager Self-Care
 ** Author(s): mailto:ashjayne.nicolson@gmail.com[Ashley Nicolson]
-** Editor(s)/Reviewer(s): mailto:kwade@redhat.com[Karsten Wade] (lead), Editorial team; Subject Matter Expert (SME)
+** Editor(s)/Reviewer(s): mailto:kwade@redhat.com[Karsten Wade] (lead), https://www.karenhixsonlpc.com/[Dr. Karen Hixson] (subject matter expert (SME) reviewer), Editorial team
 * Defining Healthy Communities
 ** Author(s): mailto:kwade@redhat.com[Karsten Wade]
 * Understanding Community Metrics
