Small edits for clarity - Updating a few items that on later reading may be too idiomatic for second-language English speakers. - Intension is to clarify with a light touch, to keep the personality/flow of the writing.
Signed-off-by: Karsten Wade <kwade@redhat.com>

--- a/why_people_participate.adoc
+++ b/why_people_participate.adoc
@@ -12,19 +12,19 @@ Given that people are involved, the answer—as you might guess—is complicated
 
 One need only consider the behaviors we see in open source communities to very quickly intuit that there's no single force at work here. After all, we see plenty of contributors on most big open source projects who are doing so at part of their day job. That doesn't mean they don't care about open source beyond a paycheck. But it does suggest different reasons for participation than the contributor working nights and weekends on their own passion project. Furthermore, we see contributors who are focused on solving some interesting technical problems while others are explicitly trying to bring about a societal benefit.
 
-But that doesn't mean we can't suss out some common patterns. Not only has there been academic research into open course contributions specifically, but there's a whole body of psychology literature dealing with motivation. As a result, motivation is the lens we'll use in this chapter to examine the question of why contributors participate in open source.
+But that doesn't mean we can't figure out some common patterns. Not only has there been academic research into open course contributions specifically, but there's a whole body of psychology literature dealing with motivation. As a result, motivation is the lens we'll use in this chapter to examine the question of why contributors participate in open source.
 
 == Extrinsic motivation
 
-We could say that this type of motivator is about "Show me the money!" and leave it at that. Extrinsic motivation isn't quite that simple, but payment in whatever form that took during a given era and place has historically been the go-to way to get people to do something. Whether to accumulate riches or provide themselves with basic necessities such as food and shelter. The idea that you do work you otherwise wouldn't bother with in exchange for something of value is deep-rooted in most human societies.
+We could say that this type of motivator is about "Show me the money!" and leave it at that. Extrinsic motivation isn't quite that simple, but payment—in whatever form common during a given era and place—has historically been the go-to way to get people to do something. Whether to accumulate riches or provide themselves with basic necessities such as food and shelter. The idea that you do work you otherwise wouldn't bother with in exchange for something of value is deep-rooted in most human societies.
 
 However obvious the existence of extrinsic motivation may seem to the average person, it wasn't really a field of formal study until the 1940s when behaviorist Clark Hull, later working with Kenneth Spence, came up with the idea of drive reduction theory. This theory focused on reducing primary drives like hunger and thirst. If you're hungry you eat. If you're thirsty you drink. Drive reduction theory fell out of fashion, in part because it _didn't_ focus on things—like money—that could be used to reduce drives but only in a secondary way. However, we see echoes of drive reduction theory in familiar concepts like Maslow's hierarchy of needs.
 
-Coming back to what makes contributors work on open source, money can, of course, be a big carrot. Even going back twenty years or so, many major open source projects had a significant number of contributors who were paid by their companies to work on open source.
+Coming back to what makes contributors work on open source, money can, of course, be a big incentive. Even going back twenty years or so, many major open source projects had a significant number of contributors who were paid by their companies to work on open source.
 
-Career advancement goes hand in hand with pay. But is open source software any different from proprietary software development in this regard? It may be. Multiple researchers have found empirical evidence to support the idea that there's at least a perceived advantage to support the argument that there are career advantages to developing code that's in the open and therefore available for others to look at and work with.
+Career advancement goes hand in hand with pay. But is open source software any different from proprietary software development in this regard? It may be. Multiple researchers have found empirical evidence to support the idea there's at least a perceived advantage that supports the argument there are career advantages to developing code that's in the open and therefore available for others to look at and work with.
 
-More recently, there's been significant empirical evidence to support the argument that there are career advantages to developing code and contributing content that's in the open and therefore available for others to look at and work with. Indeed, the idea of "GitHub-as-resume" has become a common (if sometimes inappropriately applied) theme.
+More recently, there's been significant empirical evidence to support the argument there are perceived career advantages to developing code and contributing content that's in the open, and therefore available for others to look at and work with. Indeed, the idea of "GitHub-as-resume" has become a common (if sometimes inappropriately applied) theme.
 
 == Intrinsic motivation
 
@@ -40,7 +40,7 @@ Finally, there's just fun. This should come as no surprise to anyone who hangs a
 
 == Internalized extrinsic motivation
 
-Today's psychology literature also includes the idea of internalized extrinsic motivations. These are extrinsic motivations such as gaining skills to enhance career opportunities—but they've been internalized so that the motivation comes from within rather than coming as a direct result of a carrot being dangled by someone else. It's the difference between learning a new language because you know keeping current on new tech pays off over time versus receiving a salary increase as a direct payoff for earning a certification. Gaining a good peer reputation, among community insiders and potential employers, for work in open source is one good example of how this type of motivation can play out in open source development. A variety of surveys have supported the idea that peer reputation is a driver for participation.
+Today's psychology literature also includes the idea of internalized extrinsic motivations. These are extrinsic motivations such as gaining skills to enhance career opportunities—but they've been internalized so that the motivation comes from within rather than coming as a direct result of a carrot (reward) being dangled by someone else. It's the difference between learning a new language because you know keeping current on new tech pays off over time versus receiving a salary increase as a direct payoff for earning a certification. Gaining a good peer reputation, among community insiders and potential employers, for work in open source is one good example of how this type of motivation can play out in open source development. A variety of surveys have supported the idea that peer reputation is a driver for participation.
 
 Learning is also frequently mentioned as a big benefit to participating in open source projects. Learning may be intrinsically satisfying but it can also be an important ingredient of career advancement. It can be hard to tease apart the intrinsic from the extrinsic here though.
 Is it learning for learning's sake? Is it learning for specific skills needed on the job?
